refactor: Update project title and description
Updates the application's name and description in package.json and metadata.json to accurately reflect the professional title and specialization. Adjusts UI elements in ProjectCard.tsx and App.tsx for consistency and minor aesthetic improvements.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pankaj-kapri---full-stack-&-data-enthusiast",
+  "name": "pankaj-kapri-|-software-engineer-&-data-scientist",
   "private": true,
   "version": "0.0.0",
   "type": "module",
